// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<div>
  <style>
    .search-controlled-form {
          display: flex;
          flex-direction: column;
          gap: var(--ds-size-3);
        }
        .search-controlled-chip__group {
          display: flex;
          align-items: center;
          gap: var(--ds-size-3);
        }
  </style>
  <form>
    <ds-suggestion
      data-sr-added="La til"
      data-sr-clear="Fjern tekst"
      data-sr-empty="Ingen valgte"
      data-sr-found="Naviger til venstre for å finne %d valgte"
      data-sr-invalid="Ugyldig valg"
      data-sr-items="Valgte"
      data-sr-of="av"
      data-sr-plural="%d forslag"
      data-sr-remove="Trykk for å fjerne"
      data-sr-removed="Fjernet"
      data-sr-singular="%d forslag"
      data-sr-toggle="Forslag"
    >
      <input
        id="search-input-controlled"
        aria-label="Søk"
        type="text"
        value
      >
      <button
        hidden
        type="reset"
        aria-label="Fjern tekst"
        aria-hidden="false"
        tabindex="-1"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </ds-suggestion>
    <div>
      <p data-size="sm">
        Hurtigsøk:
      </p>
      <button type="button">
        Læreplaner
      </button>
      <button type="button">
        Skole
      </button>
      <button type="button">
        Eksamen
      </button>
    </div>
  </form>
</div>
`;

exports[`Form 1`] = `
<div>
  <form>
    <ds-suggestion
      data-sr-added="La til"
      data-sr-clear="Fjern tekst"
      data-sr-empty="Ingen valgte"
      data-sr-found="Naviger til venstre for å finne %d valgte"
      data-sr-invalid="Ugyldig valg"
      data-sr-items="Valgte"
      data-sr-of="av"
      data-sr-plural="%d forslag"
      data-sr-remove="Trykk for å fjerne"
      data-sr-removed="Fjernet"
      data-sr-singular="%d forslag"
      data-sr-toggle="Forslag"
    >
      <input
        aria-label="Søk"
        type="text"
      >
      <button
        hidden
        type="reset"
        aria-label="Fjern tekst"
        aria-hidden="false"
        tabindex="-1"
      >
      </button>
      <button type="submit">
        Søk
      </button>
    </ds-suggestion>
  </form>
</div>
`;

exports[`Live Search 1`] = `
<style>
  .search-live-output__group {
          display: flex;
          gap: var(--ds-size-1);
          align-items: center;
        }
</style>
<div>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      aria-label="Søk"
      type="search"
      value
    >
    <button
      hidden
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
  </ds-suggestion>
</div>
`;

exports[`Preview 1`] = `
<form>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
      hidden
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
</form>
`;

exports[`Variants 1`] = `
<div>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      aria-label="Søk"
      type="search"
    >
    <button
      hidden
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
  </ds-suggestion>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      hidden
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      aria-label="Søk"
      type="text"
    >
    <button
      hidden
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </ds-suggestion>
</div>
`;

exports[`With Label 1`] = `
<ds-field>
  <label for="<generated>">
    Søk i læreplaner
  </label>
  <ds-suggestion
    data-sr-added="La til"
    data-sr-clear="Fjern tekst"
    data-sr-empty="Ingen valgte"
    data-sr-found="Naviger til venstre for å finne %d valgte"
    data-sr-invalid="Ugyldig valg"
    data-sr-items="Valgte"
    data-sr-of="av"
    data-sr-plural="%d forslag"
    data-sr-remove="Trykk for å fjerne"
    data-sr-removed="Fjernet"
    data-sr-singular="%d forslag"
    data-sr-toggle="Forslag"
  >
    <input
      type="text"
      name="cat-search"
      id="<generated>"
    >
    <button
      hidden
      type="reset"
      aria-label="Fjern tekst"
      aria-hidden="false"
      tabindex="-1"
    >
    </button>
    <button type="submit">
      Søk
    </button>
  </ds-suggestion>
</ds-field>
`;
